# stundentool

./: .gitignore  README.md  pyproject.toml
src/: README  TODO.md  stundentool.py
src/modules/data/: data_handler.py  store_handler.py
src/modules/data/bak/file/: IO_file.py  file_connector.py
src/modules/file/: IO_file.py  file_connector.py
src/modules/helper/: helper.py
src/modules/sqlite/: IO_db.py  db.py  db_handler.py  io.py
src/stundentool/: stundentool.py
src/stundentool/modules/data/: data_handler.py
tests/: TODO  test_db.py  test_io_db.py  test_stundentool.py
