[project]
name = "stundentool"
version = "0.1.0"
description = ""
authors = [
    {name = "Corbeau-coder",email = "joebubi@postoe.de"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "configparser (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "stundentool", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
